--- a/src/main/resources/fxml/fatigue_monitoring.fxml
+++ b/src/main/resources/fxml/fatigue_monitoring.fxml
@@ -2,30 +2,74 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.FatigueMonitoringController">
+<BorderPane prefHeight="700.0" prefWidth="900.0" styleClass="module-panel" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.aircraft.controller.FatigueMonitoringController">
     <top>
         <VBox spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Label text="Launcher Fatigue Monitoring" textFill="#1a365d">
-                    <font>
-                        <Font name="System Bold" size="18.0" />
-                    </font>
-                </Label>
+                <HBox alignment="CENTER_LEFT" spacing="15.0">
+                    <children>
+                        <!-- Report generation info -->
+                        <VBox spacing="5.0">
+                            <children>
+                                <Label fx:id="dateTimeLabel" text="Date: [auto-generated]">
+                                    <font>
+                                        <Font size="12.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="usernameLabel" text="User: [username]">
+                                    <font>
+                                        <Font size="12.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </VBox>
+
+                        <VBox HBox.hgrow="ALWAYS" alignment="CENTER">
+                            <children>
+                                <Label text="Launcher Fatigue Monitoring" textFill="#1a365d">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </VBox>
+
+                        <!-- CLIMS Logo (placeholder) -->
+                        <ImageView fx:id="climsLogo" fitHeight="60.0" fitWidth="100.0" preserveRatio="true">
+                            <image>
+                                <!-- You should replace this with your actual logo -->
+                                <Image url="@../images/clims_logo.png" />
+                            </image>
+                        </ImageView>
+                    </children>
+                </HBox>
+
+                <Separator />
+
                 <HBox alignment="CENTER_LEFT" spacing="10.0">
                     <children>
                         <Label text="Launcher Serial Number:" />
-                        <TextField fx:id="launcherSerialField" prefWidth="200.0" promptText="Enter serial number" />
-                        <Button fx:id="searchButton" mnemonicParsing="false" onAction="#onSearchButtonClick" style="-fx-background-color: #3498db; -fx-text-fill: white;" text="Search" />
-                        <Button fx:id="clearButton" mnemonicParsing="false" onAction="#onClearButtonClick" text="Clear" />
+                        <ComboBox fx:id="launcherSerialComboBox" prefWidth="250.0" promptText="Select Serial Number" />
+                        <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#onRefreshButtonClick" styleClass="secondary-button" text="Refresh" />
                     </children>
+                    <padding>
+                        <Insets bottom="5.0" top="5.0" />
+                    </padding>
                 </HBox>
             </children>
             <padding>
@@ -34,50 +78,116 @@
         </VBox>
     </top>
     <center>
-        <VBox alignment="TOP_CENTER" spacing="20.0" BorderPane.alignment="CENTER">
-            <children>
-                <Label text="FATIGUE MONITORING REPORT" textFill="#1a365d">
-                    <font>
-                        <Font name="System Bold" size="16.0" />
-                    </font>
-                </Label>
-
-                <GridPane hgap="15.0" vgap="15.0">
-                    <columnConstraints>
-                        <javafx.scene.layout.ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="120.0" prefWidth="150.0" />
-                        <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="200.0" prefWidth="250.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <javafx.scene.layout.RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+        <ScrollPane fitToWidth="true" BorderPane.alignment="CENTER">
+            <content>
+                <VBox spacing="20.0">
                     <children>
-                        <Label text="Pylon ID:" />
-                        <Label text="Aircraft Type:" GridPane.rowIndex="1" />
-                        <Label text="Flight Hours:" GridPane.rowIndex="2" />
-                        <Label text="Fatigue Index:" GridPane.rowIndex="3" />
-                        <TextField fx:id="pylonIdField" GridPane.columnIndex="1" />
-                        <TextField fx:id="aircraftTypeField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <TextField fx:id="flightHoursField" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <TextField fx:id="fatigueIndexField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                    </children>
-                </GridPane>
+                        <HBox alignment="CENTER">
+                            <children>
+                                <Label fx:id="reportTitleLabel" text="Fatigue Report: [Serial Number]" textFill="#1a365d">
+                                    <font>
+                                        <Font name="System Bold" size="18.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </HBox>
 
-                <HBox alignment="CENTER" spacing="20.0">
-                    <children>
-                        <Button fx:id="generateButton" mnemonicParsing="false" onAction="#onGenerateButtonClick" style="-fx-background-color: #1a365d; -fx-text-fill: white;" text="GENERATE" />
-                        <Button fx:id="printReportButton" mnemonicParsing="false" onAction="#onPrintReportButtonClick" text="Print Report" />
+                        <GridPane hgap="15.0" vgap="10.0" styleClass="report-form">
+                            <columnConstraints>
+                                <javafx.scene.layout.ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="150.0" prefWidth="180.0" />
+                                <javafx.scene.layout.ColumnConstraints hgrow="SOMETIMES" minWidth="200.0" prefWidth="250.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <javafx.scene.layout.RowConstraints minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                            <children>
+                                <Label styleClass="field-label" text="Launcher Name:" />
+                                <Label styleClass="field-label" text="Part Number:" GridPane.rowIndex="1" />
+                                <Label styleClass="field-label" text="Serial Number:" GridPane.rowIndex="2" />
+                                <Label styleClass="field-label" text="Number of Missions:" GridPane.rowIndex="3" />
+                                <Label styleClass="field-label" text="Number of Firings:" GridPane.rowIndex="4" />
+                                <Label styleClass="field-label" text="Flight Time (hours):" GridPane.rowIndex="5" />
+                                <Label styleClass="field-label" text="Remaining Life (%):" GridPane.rowIndex="6" />
+
+                                <TextField fx:id="launcherNameField" editable="false" GridPane.columnIndex="1" />
+                                <TextField fx:id="partNumberField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <TextField fx:id="serialNumberField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <TextField fx:id="missionCountField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <TextField fx:id="firingCountField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <TextField fx:id="flightTimeField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                <TextField fx:id="remainingLifeField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                            </children>
+                            <padding>
+                                <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                            </padding>
+                        </GridPane>
+
+                        <HBox alignment="CENTER_LEFT" spacing="10.0">
+                            <children>
+                                <Label text="Maintenance Status:" styleClass="field-label" />
+                                <Label fx:id="maintenanceStatusLabel" text="[status]" styleClass="field-label" />
+                            </children>
+                        </HBox>
+
+                        <!-- Graph section with popup button -->
+                        <VBox spacing="10.0">
+                            <children>
+                                <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                    <children>
+                                        <Label text="Launcher Degradation Over Time" styleClass="field-label">
+                                            <font>
+                                                <Font size="14.0" />
+                                            </font>
+                                        </Label>
+                                        <Button fx:id="expandGraphButton" mnemonicParsing="false" onAction="#onExpandGraphButtonClick" text="Open in New Window" />
+                                    </children>
+                                </HBox>
+
+                                <!-- Graph container -->
+                                <VBox fx:id="graphContainer" prefHeight="250.0" styleClass="report-form">
+                                    <padding>
+                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </padding>
+                                </VBox>
+                            </children>
+                        </VBox>
+
+                        <!-- Mission History Table -->
+                        <Label text="Mission History" styleClass="field-label">
+                            <font>
+                                <Font size="14.0" />
+                            </font>
+                        </Label>
+                        <TableView fx:id="missionHistoryTable" prefHeight="150.0">
+                            <columns>
+                                <TableColumn fx:id="missionIdColumn" prefWidth="100.0" text="Mission ID" />
+                                <TableColumn fx:id="missionDateColumn" prefWidth="120.0" text="Date" />
+                                <TableColumn fx:id="missionAircraftColumn" prefWidth="120.0" text="Aircraft" />
+                                <TableColumn fx:id="missionFlightTimeColumn" prefWidth="120.0" text="Flight Time" />
+                                <TableColumn fx:id="missionDamageColumn" prefWidth="150.0" text="Damage Factor" />
+                            </columns>
+                        </TableView>
+
+                        <HBox alignment="CENTER" spacing="20.0">
+                            <children>
+                                <Button fx:id="printReportButton" mnemonicParsing="false" onAction="#onPrintReportButtonClick" styleClass="primary-button" text="Print Report" />
+                            </children>
+                            <padding>
+                                <Insets top="20.0" bottom="20.0" />
+                            </padding>
+                        </HBox>
                     </children>
                     <padding>
-                        <Insets top="20.0" />
+                        <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
                     </padding>
-                </HBox>
-            </children>
-            <padding>
-                <Insets bottom="30.0" left="30.0" right="30.0" top="30.0" />
-            </padding>
-        </VBox>
+                </VBox>
+            </content>
+        </ScrollPane>
     </center>
 </BorderPane>
