--- a/src/main/resources/fxml/dashboard.fxml
+++ b/src/main/resources/fxml/dashboard.fxml
@@ -40,14 +40,25 @@
             </padding>
         </HBox>
     </top>
-    <left>
-        <VBox minWidth="200.0" styleClass="left-panel" style="-fx-background-color: #2D404E;">
-            <children>
-                <TreeView fx:id="menuTreeView" styleClass="menu-tree" VBox.vgrow="ALWAYS"
-                          style="-fx-background-color: transparent; -fx-text-fill: white; -fx-control-inner-background: #2D404E;" />
-            </children>
-        </VBox>
-    </left>
+   <left>
+       <VBox minWidth="250.0" prefWidth="300.0" styleClass="left-panel" style="-fx-background-color: #2D404E;">
+           <children>
+               <TreeView fx:id="menuTreeView" styleClass="menu-tree" VBox.vgrow="ALWAYS"
+                        style="-fx-background-color: transparent;
+                               -fx-text-fill: white;
+                               -fx-control-inner-background: #2D404E;
+                               -fx-font-size: 14px;
+                               -fx-font-weight: bold;">
+                   <VBox.margin>
+                       <Insets top="10.0" right="5.0" bottom="10.0" left="5.0" />
+                   </VBox.margin>
+               </TreeView>
+           </children>
+           <padding>
+               <Insets top="5.0" right="5.0" bottom="5.0" left="5.0" />
+           </padding>
+       </VBox>
+   </left>
     <center>
         <StackPane alignment="CENTER" style="-fx-background-color: white;">
             <children>
