--- a/src/main/resources/fxml/launcher.fxml
+++ b/src/main/resources/fxml/launcher.fxml
@@ -94,7 +94,7 @@
                                                             <children>
                                                                 <Button fx:id="saveButton" onAction="#onSaveButtonClick" styleClass="action-button" text="SAVE" />
                                                                 <Button onAction="#onClearButtonClick" styleClass="action-button" text="CLEAR" />
-                                                                <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                                                <Button onAction="#onBackButtonClick" styleClass="action-button" text="HOME" />
                                                             </children>
                                                         </HBox>
                                                     </children>
@@ -120,9 +120,7 @@
                                                 </TableView>
                                                 <HBox alignment="CENTER" spacing="15.0">
                                                     <children>
-                                                        <Button onAction="#onEditButtonClick" styleClass="action-button" text="EDIT" />
-                                                        <Button onAction="#onDeleteButtonClick" styleClass="action-button" text="DELETE" />
-                                                        <Button onAction="#onBackButtonClick" styleClass="action-button" text="BACK" />
+                                                        <Button onAction="#onBackButtonClick" styleClass="action-button" text="HOME" />
                                                     </children>
                                                 </HBox>
                                             </children>
