--- a/src/main/resources/fxml/mission_details.fxml
+++ b/src/main/resources/fxml/mission_details.fxml
@@ -106,12 +106,12 @@
                                 <Label text="Max G-Load:" />
                                 <Label text="Min G-Load:" GridPane.rowIndex="1" />
                                 <Label text="Average Altitude:" GridPane.columnIndex="2" />
-                                <Label text="Max Speed:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                                <Label text="Fired Positions:" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 
                                 <TextField fx:id="maxGLoadField" editable="false" GridPane.columnIndex="1" />
                                 <TextField fx:id="minGLoadField" editable="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                 <TextField fx:id="avgAltitudeField" editable="false" GridPane.columnIndex="3" />
-                                <TextField fx:id="maxSpeedField" editable="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+                                <TextField fx:id="firedPositionsField" editable="false" GridPane.columnIndex="3" GridPane.rowIndex="1" />
                             </children>
                             <padding>
                                 <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
